# brave-core

./: DEPS
browser/: BUILD.gn  brave_content_browser_client.cc  brave_content_browser_client.h
browser/extensions/: BUILD.gn
browser/extensions/api/: brave_shields_api.cc
common/: shield_exceptions.cc
common/extensions/api/: brave_shields.json
components/brave_shields/browser/: brave_shields_web_contents_observer.cc  brave_shields_web_contents_observer.h
components/brave_shields/common/: brave_shield_constants.h
components/content_settings/core/browser/: brave_cookie_settings.cc  brave_host_content_settings_map.cc
content/renderer/: brave_render_frame_impl.cc
patches/: components-content_settings-core-browser-cookie_settings.h.patch
renderer/: brave_content_settings_observer.cc  brave_content_settings_observer.h  brave_content_settings_observer_browsertest.cc  brave_content_settings_observer_referrers_browsertest.cc
test/: BUILD.gn
test/data/import/chrome/: README
utility/importer/: chrome_importer_unittest.cc
